[package]
name = "yiz-tunnel"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
httpdate = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
uuid = { version = "1", features = ["v7"] }
